vlib/v/checker/tests/generics_type_ambiguous.out
vlib/v/checker/tests/generics_type_ambiguous.vv:7:19: error: inferred generic type `B` is ambiguous: got `int`, expected `string`
    5 | 
    6 | fn main() {
    7 |   test(2, 2, "2", 2)
      |                   ^
    8 | }
